fix: align Echo popups with other menus

--- a/skinStyles/extensions/Echo/ext.echo.ui.desktop.less
+++ b/skinStyles/extensions/Echo/ext.echo.ui.desktop.less
@@ -10,7 +10,7 @@
 
 .mw-echo-ui-notificationBadgeButtonPopupWidget {
 	&-popup {
-		margin-top: 0; // align with other menus
+		margin-top: 8px; // align with other menus
 		box-shadow: 0 14px 28px rgba( 0, 0, 0, 0.0625 ), 0 10px 10px rgba( 0, 0, 0, 0.055 ); // boxshadow 3
 		filter: none; // disable filter drop shadow
 
